# red_envelope_server

conversion_server/: README.md
conversion_server/accesshttp/: ah_main.c  ah_server.c  config.json  makefile
conversion_server/alertcenter/: config.json
conversion_server/marketprice/: config.json  makefile  mp_config.c  restart.sh
conversion_server/matchengine/: config.json  makefile  me_balance.c  me_balance.h  me_config.c  me_config.h  me_load.c  me_main.c  me_market.c  me_market.h  me_message.c  me_message.h  me_persist.c  me_persist.h  me_server.c  restart.sh
conversion_server/readhistory/: config.json  rh_reader.c  rh_server.c
conversion_server/sql/: alter.sh  init_trade_history.sh  th.sql  tl.sql
conversion_server/utils/: ut_rpc_cmd.h
envelope_server/: README.md  build-unix.md
envelope_server/accesshttp/: ah_config.c  ah_config.h  ah_main.c  ah_server.c  config.json  makefile  restart.sh
envelope_server/expire/: CMakeLists.txt  main.cpp
envelope_server/matchengine/: config.json  makefile  me_balance.c  me_balance.h  me_cli.c  me_config.c  me_config.h  me_dump.c  me_history.c  me_history.h  me_load.c  me_load.h  me_main.c  me_market.c  me_market.h  me_operlog.c  me_operlog.h  me_persist.c  me_persist.h  me_server.c  me_trade.c  me_update.c  me_update.h  restart.sh
envelope_server/sql/: clear.sh  envelope.sql
envelope_server/utils/: ut_config.c  ut_config.h  ut_define.h  ut_rpc_cmd.h
igg_server/: interface.md
igg_server/accesshttp/: makefile  (+5 more)
igg_server/unittest/: CMakeLists.txt  test_conversion.cpp  test_io.cpp  testcurl.h  testingsetup.h
(+47 files in other folders)
